# BLT-Sizzle

./: .env.example  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION.md  README.md  SECURITY.md  TESTING.md  TODO.md  VISUAL_GUIDE.md  manifest.in  package.json  pyproject.toml  schema.sql  wrangler.toml
.github/workflows/: ci.yml  test.yml
migrations/: 0000_init.sql  0001_github_auth.sql  0001_oauth.sql  0002_organizations.sql  0003_encryption_and_approval.sql
scripts/: push-env.sh
sizzle/: admin.py  conf.py  models.py  urls.py  views.py
sizzle/migrations/: 0001_initial.py  0002_update_optional_organization.py
sizzle/templates/: add_sizzle_checkin.html  base.html  sizzle.html  sizzle_daily_status.html  time_logs.html  user_sizzle_report.html
sizzle/utils/: model_loader.py
src/: index.html  index.py  scheduler.py
src/pages/: check-ins.html  leaderboard.html  settings.html  time-logs.html
tests/: test_api.py  test_unit.py
workers/: main.py  scheduler.py
